--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "prettier": "prettier --write \"src/**/*\""
   },
   "dependencies": {
-    "expo": "~41.0.1",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react": "~16.9.35",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "eslint": "^7.25.0",
@@ -29,7 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "prettier": "^2.2.1",
-    "typescript": "~4.0.0"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
